feat: add manual interactions to ContractNegotiation and TransferProcess